chore: set rule-based is default for sec rule
